--- a/src/front-end/pug/static/_head.pug
+++ b/src/front-end/pug/static/_head.pug
@@ -1,2 +1,3 @@
 script(type='text/javascript').
-    var env = "#{data.env.name}";
+    var GLOBALS = "#{JSON.stringify(GLOBALS)}";
+    var lang = "#{lang}";
