pug will stringify objects for you

--- a/src/front-end/pug/static/_head.pug
+++ b/src/front-end/pug/static/_head.pug
@@ -1,3 +1,3 @@
 script(type='text/javascript').
-    var GLOBALS = "#{JSON.stringify(GLOBALS)}";
+    var GLOBALS = "#{GLOBALS}";
     var lang = "#{lang}";
