huge code cleanup

--- a/src/front-end/pug/static/_head.pug
+++ b/src/front-end/pug/static/_head.pug
@@ -1,3 +1,4 @@
+link(rel="stylesheet", type="text/css", href="index.css")
 script(type='text/javascript').
     var GLOBALS = !{(JSON.stringify(GLOBALS))};
     var lang = "#{lang}";
