--- a/src/front-end/pug/static/index.pug
+++ b/src/front-end/pug/static/index.pug
@@ -11,7 +11,7 @@ html(class=lang)
             | }
     body
         a#saver
-        #main
+        #app-page
             include ui/_site-loader
             include ui/_main-menu
             include ui/_header
