--- a/src/front-end/pug/static/ui/_main-menu.pug
+++ b/src/front-end/pug/static/ui/_main-menu.pug
@@ -1,7 +1,5 @@
 #main-menu
-	.handle
-		.contents(class="fa fa-bars")
-	a.closer(href="#/") Master View
-	a.closer(href="#/sculpture") Viz Overview
-	a.closer(href="#/status") Status
-	
+    .handle
+        .contents(class="fa fa-bars")
+    a.closer(href="#/master") Master Page
+    a.closer(href="#/control-panel") Control Panel
