--- a/src/front-end/sass/pages/_master-page.sass
+++ b/src/front-end/sass/pages/_master-page.sass
@@ -2,21 +2,8 @@
 	.background
 		// background-image: url(http://placekitten.com/g/1280/720)
 	.content
-		#projectors
-			clear: both
-			background-color: #222
-			margin-left: -$page-margin
-			width: 100vw
-			padding: $page-margin
-		.projector
-			display: inline-block
-			margin: 2px
-		.viz
-			margin: 2*$page-margin 0
-			svg
-				background: #222
 		a
-			margin: 2px
+			margin: 2rem
 			padding: $page-margin
 			font-size: 14rem
 			text-decoration: none
@@ -30,12 +17,3 @@
 			&:hover
 				background-color: rgba(48,48,48,0.35)
 				color: #ccc
-		label
-			display: block
-			margin: 0 0 $page-margin 0
-			h3
-				font-size: 14rem
-				margin: 5rem 0
-		.control-group
-			margin: $page-margin 40px 0 0
-			float: left
