--- a/src/front-end/sass/ui/_main-menu.sass
+++ b/src/front-end/sass/ui/_main-menu.sass
@@ -1,37 +1,41 @@
 $menu-link-color: #ccc
 $menu-link-hover-color: #fff
-$menu-handle-size: 35px
+$menu-handle-size: 35rem
 
 #main-menu
 	font-family: $header-font-family
 	color: #ccc
 	z-index: 2
 	@include transition(transform 0.5s ease-out)
-	.menu-open &
+	&.menu-open
 		transform: translate3d(-$menu-width,0,0)
 	position: absolute
 	top: 0
 	right: -$menu-width
 	height: 100%
-	margin: $header-height 0
+	//margin: $header-height 0
 	width: $menu-width
 	background-color: 111
 	a
+		font-size: 20rem
 		text-transform: uppercase
 		text-decoration: none
 		display: block
-		height: 40px
-		line-height: 20px
-		margin: 10px
-		padding: 10px
+		height: 40rem
+		line-height: 20rem
+		margin: 10rem
+		padding: 10rem
 		color: $menu-link-color
 		&:hover
 			color: $menu-link-hover-color
-			background-color: #333 
+			background-color: #333
 		&.active
-			background-color: #222 
+			background-color: #222
 			color: #ddd
 	.handle
+		@include transition(transform 0.5s ease-out)
+		.menu-open &
+			transform: translate3d($menu-width,0,0)
 		display: table
 		position: absolute
 		top: 0
@@ -40,10 +44,12 @@ $menu-handle-size: 35px
 		height: $menu-handle-size
 		background-color: #000
 		color: #ccc
+		cursor: pointer
 		&:hover
+			background-color: #444
 			color: #fff
 		.contents
-			font-size: 20px
+			font-size: 20rem
 			display: table-cell
 			vertical-align: middle
 			text-align: center
