--- a/src/front-end/pug/static/ui/_footer.pug
+++ b/src/front-end/pug/static/ui/_footer.pug
@@ -1,8 +1,6 @@
 footer
-	.left
-		a.closer(href="#/") Master Controller
-		a.closer(href="#/sculpture") Viz Overview
-		a.closer(href="#/status") Status Viewer
-	.center
-	.right
-		//- include _site-share
+    .left
+        a.closer(href="#/") Master Controller
+    .center
+    .right
+        include _site-share
