--- a/src/front-end/pug/static/ui/_main-menu.pug
+++ b/src/front-end/pug/static/ui/_main-menu.pug
@@ -1,5 +1,7 @@
 #main-menu
     .handle
-        .contents(class="fa fa-bars")
+        .contents
+            .open-icon.fa.fa-bars
+            .close-icon.fa.fa-close
     a.closer(href="#/master") Master Page
     a.closer(href="#/control-panel") Control Panel
