--- a/src/front-end/pug/static/index.pug
+++ b/src/front-end/pug/static/index.pug
@@ -19,6 +19,6 @@ html(class=lang)
             #pages
                 include pages/_control-panel-page
                 include pages/_master-page
-                .cover
+                .cover.vignette
 
         script(src="index.js")
