--- a/src/front-end/pug/static/ui/_footer.pug
+++ b/src/front-end/pug/static/ui/_footer.pug
@@ -1,6 +1,6 @@
 footer
     .left
-        a.closer(href="#/") Master Controller
+        a(href="#/") Master Controller
     .center
     .right
         include _site-share
