--- a/src/front-end/pug/static/ui/_main-menu.pug
+++ b/src/front-end/pug/static/ui/_main-menu.pug
@@ -1,7 +1,9 @@
 #main-menu
-    .handle
+    button.handle.expando-button
         .contents
-            .open-icon.fa.fa-bars
-            .close-icon.fa.fa-close
+            .glyf
+                .icon.open-icon.fa.fa-gear
+            .glyf
+                .icon.close-icon.fa &#8677;
     a.closer(href="#/master") Master Page
     a.closer(href="#/control-panel") Control Panel
