--- a/src/front-end/sass/_body.sass
+++ b/src/front-end/sass/_body.sass
@@ -28,3 +28,17 @@ h3
 	font-size: 18rem
 	margin: 5rem 0
 	color: $header-color
+
+
+button:focus
+	outline: none
+	background-color: rgba(0,0,0,0.8)
+
+a:focus
+	outline: none
+	background-color: rgba(0,0,0,0.3)
+
+input:focus
+	outline: none
+	// box-shadow: 0 0 50rem rgba(0,0,0,0.3)
+	border-top-color: #bbb !important
