--- a/src/front-end/sass/index.sass
+++ b/src/front-end/sass/index.sass
@@ -6,7 +6,12 @@
 @import "mixins"
 
 // -------------------------------------
-// fonts
+// effects
+
+@import "vignette"
+
+// -------------------------------------
+// elements
 
 @import "reset"
 @import "body"
@@ -32,6 +37,7 @@
 @import "ui/select"
 @import "ui/button"
 @import "ui/scrollbar"
+@import "ui/expando-button"
 
 // -------------------------------------
 // Pages
