--- a/src/front-end/sass/pages/_master-page.sass
+++ b/src/front-end/sass/pages/_master-page.sass
@@ -1,6 +1,6 @@
 #master-page
 	.background
-		// background-image: url(http://placekitten.com/g/1280/720)
+		background-image: url('http://i.imgur.com/9vsQrVC.jpg')
 	.content
 		a
 			margin: 2rem
