--- a/src/front-end/sass/ui/_footer.sass
+++ b/src/front-end/sass/ui/_footer.sass
@@ -6,6 +6,7 @@ footer
 	width: 100%
 	z-index: 4
 	background-color: rgba(0,0,0,0.5)
+	@include box-shadow(1)
 	// display: none
 	.left
 		position: absolute
