--- a/src/front-end/sass/ui/_header.sass
+++ b/src/front-end/sass/ui/_header.sass
@@ -6,7 +6,8 @@ header
 	width: 100%
 	z-index: 4
 	background-color: rgba(0,0,0,0.5)
-	box-shadow: 0rem 0rem 10rem rgba(0,0,0,0)
+	box-shadow: 0rem 0rem 7rem rgba(0,0,0,.3)
+	@include box-shadow(1)
 	// display: none
 	h1
 		color: $header-color
