--- a/src/front-end/sass/_vars.sass
+++ b/src/front-end/sass/_vars.sass
@@ -1,3 +1,12 @@
+
+$laptop-scale: 1440/1920
+$tablet-scale: 1280/1920
+$phone-scale: 960/1920
+$old-phone-scale: 640/1920
+
+$edge-margin: 50rem
+$button-size: 100rem
+
 $paragraph-color: #888
 $main-link-color: #ccc
 $main-link-color-hover: #fff
@@ -20,6 +29,8 @@ $header-height: 38rem
 $footer-height: 40rem
 
 $track-width: 128rem
+
+$easeOutQuad: cubic-bezier(0.165, 0.840, 0.440, 1.000)
 
 $mq-phone-portrait: "only screen and (max-width : 320px)"
 $mq-phone-landscape: "only screen and (max-width : 320px)"
