--- a/src/front-end/sass/pages/_control-panel-page.sass
+++ b/src/front-end/sass/pages/_control-panel-page.sass
@@ -1,11 +1,13 @@
 #control-panel-page
-	background-image: url(http://placekitten.com/g/1280/720)
+	background-image: url('http://placekitten.com/1280/720')
 	background-attachment: fixed
 	background-size: cover
 	background-position: 50% 50%
 	.background
 		background: transparent
 	.content
+		.scrollable
+			height: 3000px
 		label
 			display: block
 			margin: 0 0 $page-margin 0
