--- a/src/front-end/sass/pages/_page.sass
+++ b/src/front-end/sass/pages/_page.sass
@@ -2,14 +2,15 @@
 	width: 100%
 	height: 100%
 	position: relative
-	overflow: hidden
 
 #pages
 	@include transition(transform 0.35s ease-out)
-	-webkit-overflow-scrolling
+	-webkit-overflow-scrolling: touch
+	overflow: hidden
+
 	.menu-open &
 		display: block
-		transform: translate3d((-$menu-width/2),0,0)
+		/*transform: translate3d((-$menu-width/2),0,0)*/
 		.cover
 			@include transition(opacity 0.35s)
 			left: 0
@@ -40,7 +41,7 @@
 		// display: block
 
 	.background
-		width: 100%
+		width: calc(100% + #{$menu-width})
 		height: 100%
 		position: fixed
 		z-index: 0
@@ -48,7 +49,7 @@
 		background-position: 50% 50%
 		transform: translate3d(0,0,0)
 		top: 0
-		left: 0
+		left: -$menu-width / 2
 		background-color: #333
 	.content
 		min-height: 100%
